--- a/JackKirby/JackKirby.html
+++ b/JackKirby/JackKirby.html
@@ -61,6 +61,481 @@ After serving in the European Theater in World War II, Kirby produced work for D
 At DC, Kirby created his Fourth World saga, which spanned several comics titles. While these series proved commercially unsuccessful and were canceled, the Fourth World's New Gods have continued as a significant part of the DC Universe. Kirby returned to Marvel briefly in the mid-to-late 1970s, then ventured into television animation and independent comics. In his later years, Kirby, who has been called "the William Blake of comics", began receiving great recognition in the mainstream press for his career accomplishments, and in 1987 he was one of the three inaugural inductees of the Will Eisner Comic Book Hall of Fame. In 2017, Kirby was posthumously named a Disney Legend with Lee for their co-creations not only in the field of publishing, but also because those creations formed the basis for Walt Disney Company's financially and critically successful media franchise, the Marvel Cinematic Universe.
 </p><p>
 Kirby was married to Rosalind Goldstein in 1942. They had four children, and remained married until his death from heart failure in 1994, at the age of 76. The Jack Kirby Awards and Jack Kirby Hall of Fame were named in his honor, and he is known as "The King" among comics fans for his many influential contributions to the medium.
+</p><p>
+I wanted to link all of the covers Kirby has done, but there are so many, it may take years. To get a sense of how much work Kirby has done, I am attempting to list some of the characters he as created, because there are hundreds of issues of dozens of titles he has done covers for. I would like to get this list to link to titles I have, but even that seems to be too much work!
+</p><p>
+<li>Abominable Snowman (comics)
+<li>Abraham Erskine
+<li>Absorbing Man
+<li>Ace Morgan
+<li>Actor (comics)
+<li>Adam Warlock
+<li>Agatha Harkness
+<li>Aginar
+<li>Agon (comics)
+<li>Ajak
+<li>Alicia Masters
+<li>Anelle
+<li>Annihilus
+<li>Ant-Man
+<li>Ares (Marvel Comics)
+<li>Arishem the Judge
+<li>Arnim Zola
+<li>Artemis (Marvel Comics)
+<li>Athena (Marvel Comics)
+<li>Atlas (DC Comics)
+<li>Attuma
+<li>Avengers (comics)
+<li>Awesome Android
+<li>Balder (comics)
+<li>Baron Strucker
+<li>Baron Zemo
+<li>Batroc the Leaper
+<li>Beast (comics)
+<li>Bekka
+<li>Bernadeth
+<li>Betty Ross
+<li>Big Barda
+<li>Black Bolt
+<li>Black Panther (Marvel Comics)
+<li>Black Racer (DC Comics)
+<li>Blastaar
+<li>Blob (comics)
+<li>Bolivar Trask
+<li>Boomerang (comics)
+<li>Bor (Marvel Comics)
+<li>Boss Barker
+<li>Boy Commandos
+<li>Brother Tode
+<li>Brotherhood of Mutants
+<li>Bruno Mannheim
+<li>Brute That Walks
+<li>Bruttu
+<li>Bucky Barnes
+<li>Bull Brogan
+<li>Burner
+<li>Butterfly
+<li>Captain 3-D
+<li>Captain America
+<li>Captain Barracuda
+<li>Captain Glory
+<li>Captain Victory (comics)
+<li>Celestials (comics)
+<li>Celia Rawlings
+<li>Challengers of the Unknown
+<li>Circus of Crime
+<li>Colonel Kragg
+<li>Colonel Kuro Chin
+<li>Comrade X
+<li>Contemplator
+<li>Count Tagar
+<li>Crazy Quilt
+<li>Crusaders (Marvel Comics)
+<li>Crypto-Man
+<li>Crystal (comics)
+<li>Cyclops (Marvel Comics)
+<li>Cyttorak
+<li>Dabney Donovan
+<li>Daily Bugle
+<li>Dame Kackle
+<li>Dan Turpin
+<li>Danger Room
+<li>Darkseid
+<li>Deep Six (DC Comics)
+<li>Delphan Brothers
+<li>DeSaad
+<li>Destroyer Duck
+<li>Deviant (comics)
+<li>Devil Dinosaur
+<li>Devilance
+<li>Diablo (Marvel Comics)
+<li>Dingbats of Danger Street
+<li>Dino Manelli
+<li>Dionysus
+<li>Doctor Bedlam
+<li>Doctor Doom
+<li>Doctor Druid
+<li>Doctor Faustus
+<li>Domo
+<li>Dorrek VII
+<li>Doughboy (comics)
+<li>Dr. Cedric Rawlings
+<li>Dragon Man
+<li>Dragoom
+<li>Dreaming Celestial
+<li>Dredmund the Druid
+<li>Dromedan
+<li>Druig
+<li>Dubbilex
+<li>Dum Dum Dugan
+<li>Edwin Jarvis
+<li>Egghead (Marvel Comics)
+<li>Ego the Living Planet
+<li>Elektro
+<li>Enchanters
+<li>Enchantress (Marvel Comics)
+<li>Enclave (comics)
+<li>Erik Josten
+<li>Eson the Searcher
+<li>Eternals (comics)
+<li>Etrigan the Demon
+<li>Executioner (comics)
+<li>Fafnir (Marvel Comics)
+<li>Fandral
+<li>Fantastic Four
+<li>Female Furies
+<li>Fenris Wolf (Marvel Comics)
+<li>Fighting American
+<li>Fin Fang Foom
+<li>Fixer (comics)
+<li>Florus Homo
+<li>Fly (Archie Comics)
+<li>Fly Man
+<li>Forager (character)
+<li>Forbush Man
+<li>Forever People
+<li>Forgotten One (comics)
+<li>Franklin Richards (comics)
+<li>Franklin Storm
+<li>Frightful Four
+<li>Funky Flashman
+<li>Gabe Jones
+<li>Galactus
+<li>Gammenon the Gatherer
+<li>Gargantus
+<li>Gargoyle (comics)
+<li>General Ching
+<li>General Wo
+<li>Giant-Man
+<li>Giganto
+<li>Gigantus
+<li>Gilgamesh
+<li>Gilotina
+<li>Gimlet
+<li>Global Peace Agency
+<li>Glorious Godfrey
+<li>Goliath (Marvel Comics)
+<li>Gomdulla
+<li>Googam
+<li>Goom
+<li>Gorgilla
+<li>Gorgon (Inhuman)
+<li>Gor-Kill
+<li>Granny Goodness
+<li>Grey Gargoyle
+<li>Grogg
+<li>Groot
+<li>Grottu King Of The Insects
+<li>Growing Man
+<li>Gruto
+<li>Guardian (DC Comics)
+<li>Gullin
+<li>Gustav Hauptmann
+<li>H.E.R.B.I.E
+<li>Hank Pym
+<li>Happy Sam Sawyer
+<li>Hargen the Measurer
+<li>Harry Phillips
+<li>Hate Monger
+<li>Hedy Wolfe
+<li>Heggra
+<li>Heimdall (comics)
+<li>Heinrich Zemo
+<li>Heinz Kruger
+<li>Hela (comics)
+<li>Helmut Zemo
+<li>Hera (Marvel Comics)
+<li>Herald of Galactus
+<li>Hercules (Marvel Comics)
+<li>Hermes (Marvel Comics)
+<li>High Evolutionary
+<li>Highfather
+<li>Hijacker
+<li>Himon
+<li>Himon
+<li>Hippolyta (Marvel Comics)
+<li>Hoarfen
+<li>Hogun
+<li>Hulk
+<li>Hulk Robot
+<li>Human Torch
+<li>Iceman (Marvel Comics)
+<li>Idunn
+<li>Igor Drenkov
+<li>Igron The Invincible
+<li>Ikaris
+<li>immortus
+<li>imperial Hydra
+<li>Impossible Man
+<li>Infant Terrible
+<li>Infinity Man
+<li>Inhumans
+<li>Intergang
+<li>Invisible Woman
+<li>Iron Man
+<li>It! The Living Colossus
+<li>Izzy Cohen
+<li>Jane Foster (comics)
+<li>Janus
+<li>Jasper Sitwell
+<li>Jean Grey
+<li>Jed Walker
+<li>Jemiah the Analyzer
+<li>Jinku
+<li>Jinni
+<li>Juggernaut (comics)
+<li>Jungle Action
+<li>Junior Juniper
+<li>Justifiers
+<li>Kai-Mak
+<li>Kala (comics)
+<li>Kalibak
+<li>Kallusians
+<li>Kamandi
+<li>Kang the Conquerer
+<li>Kanto (comics)
+<li>Karkas (comics)
+<li>Karnak (comics)
+<li>Karnilla
+<li>Ka-Zar (comics)
+<li>Khor
+<li>Kiber The Cruel
+<li>Kingo Sunen
+<li>Klarion the Witch Boy
+<li>Klaw (Marvel Comics)
+<li>Kobra (DC Comics)
+<li>Kosmosians
+<li>Krang (Marvel Comics)
+<li>Kree
+<li>Kro (comics)
+<li>Kronans
+<li>Kronin Krask
+<li>Krushki
+<li>Lashina
+<li>Laufey (comics)
+<li>Leila Taylor
+<li>Lifter (comics)
+<li>Lightray (character)
+<li>Lippy Louie
+<li>List of New Gods
+<li>Living Eraser
+<li>Living Totem
+<li>Lockjaw (comics)
+<li>Lo-Karr
+<li>Loki (comics)
+<li>Lord of Death
+<li>Lucifer (Marvel Comics)
+<li>Machine Man
+<li>Mad Harriet
+<li>Mad Thinker
+<li>Madame X
+<li>Magneto (Marvel Comics)
+<li>Magnir
+<li>Makkari (comics)
+<li>Man-Beast
+<li>Man-Fish
+<li>Mangog
+<li>Manhunter (comics)
+<li>Man-Thing
+<li>Mantis (DC Comics)
+<li>Margo Damian
+<li>Mastermind (Jason Wyngarde)
+<li>Masters of Evil
+<li>Maximus (comics)
+<li>Medusa (comics)
+<li>Mentallo
+<li>Metallo
+<li>Metron (comics)
+<li>Mind Master
+<li>Miracle Man
+<li>Mister Fantastic
+<li>Mister Miracle (Shilo Norman)
+<li>MODOK
+<li>Mogul
+<li>Mole Man
+<li>Molecule Man
+<li>Molto
+<li>Mongu
+<li>Monsteroso
+<li>Monstro
+<li>Monstrom
+<li>Moomba
+<li>Moon-Boy
+<li>Morgaine le Fey (DC Comics)
+<li>Morgan Edge
+<li>Morrat
+<li>Mr. Scarlet
+<li>Mutant Force
+<li>New Gods
+<li>Newsboy Legion
+<li>Nezarr the Calculator
+<li>Nick Fury
+<li>Nigel Pigman
+<li>Oberon (comics)
+<li>Octo-Sapien
+<li>Odin (character)
+<li>Ogur
+<li>Olympians (Marvel Comics)
+<li>OMAC (Buddy Blank)
+<li>Oneg the Prober
+<li>Orikal
+<li>Orion (comics)
+<li>Orrgo
+<li>Painter (comics)
+<li>Painter of 1000 Perils
+<li>Pamela Hawley
+<li>Parademon
+<li>Paul Ignatius
+<li>Pearla
+<li>Peepers (Marvel Comics)
+<li>Peggy Carter
+<li>Pinky Pinkerton
+<li>Plunderer (comics)
+<li>Pluto (Marvel Comics)
+<li>Power Broker
+<li>Princess Zanda
+<li>Professor X
+<li>Psycho-Man
+<li>Puppet Master (Marvel Comics)
+<li>Quasimodo (comics)
+<li>Queen Knorda
+<li>Quicksilver (comics)
+<li>Ra The Avenger
+<li>Radioactive Man (comics)
+<li>Randall Darby
+<li>Ransak the Reject
+<li>Rawhide Kid
+<li>Rebel Ralston
+<li>Red Ghost
+<li>Red Hargrove
+<li>Red Ryan (comics)
+<li>Red Skull
+<li>Red Wolf
+<li>Replicus
+<li>Resistants
+<li>Rick Jones (character)
+<li>Ringmaster (comics)
+<li>Ronan the Accuser
+<li>Rorgg King Of The Spider Men
+<li>Sandman (DC Comics)
+<li>Sandu
+<li>Sazzik
+<li>Scarlet Beetle
+<li>Scarlet Witch
+<li>Scorpion (Marvel Comics)
+<li>Seidring
+<li>Sentinel (comics)
+<li>Sentry (Kree)
+<li>Sersi
+<li>Sgt. Fury and his Howling Commandos
+<li>Shagg
+<li>Sharon Carter
+<li>Shellshock
+<li>Shezada
+<li>Shinsky
+<li>Sif (comics)
+<li>Silas Mourner
+<li>Silent Fox
+<li>Silent Ones
+<li>Silver Star
+<li>Silver Surfer
+<li>Sir Porga
+<li>Skagg
+<li>Skoll
+<li>Skrull
+<li>Skrulls
+<li>Sky Masters
+<li>Sleeper (Marvel Comics)
+<li>Slither
+<li>Sniper
+<li>Sonny Sumo
+<li>Space Phantom
+<li>Spliny
+<li>Sporr
+<li>Sprite (Eternal)
+<li>Steppenwolf (comics)
+<li>Stompa
+<li>Stranger (comics)
+<li>Super-Adaptoid
+<li>Super-Skrull
+<li>Supreme Intelligence
+<li>Surtur (Marvel Comics)
+<li>Taboo
+<li>T'Chaka
+<li>Tefral the Surveyor
+<li>Ten-For
+<li>The Green Thing
+<li>The Midnight Monster
+<li>The Night People
+<li>The Six-Million Year Man
+<li>Thena
+<li>Thermal Man
+<li>Thing (comics)
+<li>Thor (Marvel Comics)
+<li>Thought Master
+<li>Thug Thatcher
+<li>Thunderbolt Ross
+<li>Tigra (DC Comics)
+<li>Titano
+<li>Toad (comics)
+<li>Tomazooma
+<li>Torgo
+<li>Torr
+<li>Tracy Warner
+<li>Trapster
+<li>Tricephalous (comics)
+<li>Triton (comics)
+<li>Trull The Unhuman
+<li>Tutinax
+<li>Two-Gun Kid
+<li>Tyr (Marvel Comics)
+<li>Tyrannus (comics)
+<li>Uatu
+<li>Uatu the Watcher
+<li>Ulik
+<li>Unicorn (comics)
+<li>Unus the Untouchable
+<li>Valkin
+<li>Vanisher
+<li>Vira
+<li>Virman Vundabar
+<li>Vision (Aarkus)
+<li>Volla (comics)
+<li>Volstagg
+<li>Warlord Kaa
+<li>Warren Worthington III
+<li>Warriors Three
+<li>Wasp (comics)
+<li>Watcher (comics)
+<li>Wazir
+<li>Werner von Doom
+<li>Whirlwind (comics)
+<li>Wilbur Fiske
+<li>Wilbur Weems
+<li>William Taurey
+<li>Willie Lumpkin
+<li>Wizard (Marvel Comics)
+<li>Wonder Man
+<li>Wong-Chu
+<li>Wrecker (comics)
+<li>Wyatt Wingfoot
+<li>Xantha
+<li>Xemnu
+<li>Xemu (comics)
+<li>X-Men
+<li>Yancy Street Gang
+<li>Yellow-Crested Titans
+<li>Ymir (Marvel Comics)
+<li>Yogi Dakor
+<li>Young Allies (Marvel Comics)
+<li>Zabu
+<li>Zarin (comics)
+<li>Zarkorr
+<li>Zarrko
+<li>Zeus (Marvel Comics)
+<li>Ziran the Tester
+<li>Zota
+<li>Zuras
 </p>
 </body>
 </html>
