--- a/index.html
+++ b/index.html
@@ -1843,6 +1843,13 @@
 </tr>
 
 <tr>
+<td>Authority</td>
+<td>1999</td>
+<td>DC</td>
+<td><a href="Authority/Authority.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Autobio Graphix</td>
 <td>2003</td>
 <td>Dark Horse</td>
