--- a/index.html
+++ b/index.html
@@ -2488,6 +2488,13 @@
 <td><a href="Black/Black.html">Details</a></td>
 </tr>
 
+<tr>
+<td>Black Badge</td>
+<td>2018</td>
+<td>Boom!</td>
+<td><a href="BlackBadge/BlackBadge.html">Details</a></td>
+</tr>
+
 <br>
 <tr>
 <td>Black Beetle</td>
