--- a/index.html
+++ b/index.html
@@ -3819,6 +3819,13 @@
 </tr>
 
 <tr>
+<td>Cosmic Odyssey</td>
+<td>1988</td>
+<td>DC</td>
+<td><a href="CosmicOdyssey/CosmicOdyssey.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Cosmic Powers</td>
 <td>1994</td>
 <td>Marvel</td>
