--- a/index.html
+++ b/index.html
@@ -7729,6 +7729,13 @@
 </tr>
 
 <tr>
+<td>Irredeemable</td>
+<td>2009</td>
+<td>Boom!</td>
+<td><a href="Irredeemable/Irredeemable.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Irredeemable Ant-Man</td>
 <td>2006</td>
 <td>Marvel</td>
