--- a/index.html
+++ b/index.html
@@ -14390,6 +14390,13 @@
 </tr>
 
 <tr>
+<td>Understanding Comics</td>
+<td>1994</td>
+<td>Harper Collins</td>
+<td><a href="UnderstandingComics/UnderstandingComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Underwater Welder</td>
 <td>2012</td>
 <td>Top Shelf</td>
