--- a/index.html
+++ b/index.html
@@ -15294,6 +15294,13 @@
 </tr>
 
 <tr>
+<td>Writing For Comics</td>
+<td>2003</td>
+<td>Avatar</td>
+<td><a href="WritingForComics/WritingForComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Wulf the Barbarian</td>
 <td>1975</td>
 <td>Atlas Seaboard</td>
@@ -15305,6 +15312,13 @@
 <td>1955</td>
 <td>Marvel</td>
 <td><a href="WyattEarp/WyattEarp.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Wytches</td>
+<td>2014</td>
+<td>Image</td>
+<td><a href="Wytches/Wytches.html">Details</a></td>
 </tr>
 
 <tr>
