--- a/index.html
+++ b/index.html
@@ -2041,6 +2041,13 @@
 </tr>
 
 <tr>
+<td>Barrier</td>
+<td>2018</td>
+<td>Image</td>
+<td><a href="Barrier/Barrier.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Barry Windsor-Smith</td>
 <td>1949</td>
 <td>Creator</td>
@@ -10183,6 +10190,13 @@
 <td>2004</td>
 <td>Dark Horse</td>
 <td><a href="Moth/Moth.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Motor Crush</td>
+<td>2016</td>
+<td>Image</td>
+<td><a href="MotorCrush/MotorCrush.html">Details</a></td>
 </tr>
 
 <tr>
