--- a/index.html
+++ b/index.html
@@ -4715,6 +4715,13 @@
 </tr>
 
 <tr>
+<td>Descender</td>
+<td>2018</td>
+<td>Image</td>
+<td><a href="Descender/Descender.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Destroyer</td>
 <td>2009</td>
 <td>Marvel</td>
