--- a/index.html
+++ b/index.html
@@ -4975,6 +4975,13 @@
 </tr>
 
 <tr>
+<td>Doll Man</td>
+<td>1941</td>
+<td>Quality</td>
+<td><a href="DollMan/DollMan.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Dollhouse</td>
 <td>2011</td>
 <td>Dark Horse</td>
