--- a/index.html
+++ b/index.html
@@ -5972,6 +5972,14 @@
 </tr>
 
 <tr>
+<td>Forbidden Worlds</td>
+<td>1951</td>
+<td>ACG</td>
+<td><a href="ForbiddenWorlds/ForbiddenWorlds.html">Details</a></td>
+</tr>
+
+
+<tr>
 <td>Force Works</td>
 <td>1994</td>
 <td>Marvel</td>
