--- a/index.html
+++ b/index.html
@@ -1493,6 +1493,13 @@
 </tr>
 
 <tr>
+<td>Animal Comics</td>
+<td>1942</td>
+<td>Dell</td>
+<td><a href="AnimalComics/AnimalComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Animal Confidential</td>
 <td>1992</td>
 <td>Dark Horse</td>
@@ -3532,6 +3539,13 @@
 </tr>
 
 <tr>
+<td>Classic Comics</td>
+<td>1941</td>
+<td>Gilberton</td>
+<td><a href="ClassicsIllustrated/ClassicsIllustrated.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Classic Star Wars</td>
 <td>1992</td>
 <td>Dark Horse</td>
@@ -3683,6 +3697,13 @@
 <td>2016</td>
 <td>IDW</td>
 <td><a href="ComicBookHistoryOfComics/ComicBookHistoryOfComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Comic Comics</td>
+<td>1946</td>
+<td>Fawcett</td>
+<td><a href="ComicComics/ComicComics.html">Details</a></td>
 </tr>
 
 <tr>
