--- a/index.html
+++ b/index.html
@@ -6673,6 +6673,13 @@
 </tr>
 
 <tr>
+<td>Green Arrow</td>
+<td>1941</td>
+<td>DC</td>
+<td><a href="GreenArrow/GreenArrow.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Green Goblin</td>
 <td>1995</td>
 <td>Marvel</td>
