--- a/index.html
+++ b/index.html
@@ -12998,6 +12998,13 @@
 </tr>
 
 <tr>
+<td>Snow White and the Seven Dwarfs</td>
+<td>1937</td>
+<td>Disney</td>
+<td><a href="SnowWhite/SnowWhite.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Solarman</td>
 <td>1979</td>
 <td>Pendulum Press</td>
