--- a/index.html
+++ b/index.html
@@ -1654,6 +1654,13 @@
 </tr>
 
 <tr>
+<td>Archie</td>
+<td>1942</td>
+<td>Archie</td>
+<td><a href="Archie/Archie.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Archie vs. Predator</td>
 <td>2015</td>
 <td>Dark Horse</td>
