--- a/index.html
+++ b/index.html
@@ -1950,6 +1950,13 @@
 </tr>
 
 <tr>
+<td>B.P.R.D.</td>
+<td>2002</td>
+<td>Dark Horse</td>
+<td><a href="BPRD/BPRD.html">Details</a></td>
+</tr>
+
+<tr>
 <td>B.P.R.D. Dark Waters</td>
 <td>2003</td>
 <td>Dark Horse</td>
@@ -5871,6 +5878,13 @@
 <td>1919</td>
 <td>Sullivan Studios</td>
 <td><a href="Felix/Felix.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Femforce</td>
+<td>1985</td>
+<td>AC</td>
+<td><a href="Femforce/Femforce.html">Details</a></td>
 </tr>
 
 <tr>
@@ -14809,6 +14823,13 @@
 <td>1927</td>
 <td>Creator</td>
 <td><a href="WallyWood/WallyWood.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Walt Disney's Comics</td>
+<td>1940</td>
+<td>Dell</td>
+<td><a href="WaltDisneysComics/WaltDisneysComics.html">Details</a></td>
 </tr>
 
 <tr>
