--- a/MickeyMouse/MickeyMouse.html
+++ b/MickeyMouse/MickeyMouse.html
@@ -33,6 +33,19 @@ Publisher: Disney 1928<br>
 <div class="mySlides" style="text-align: center;"><img src="MickeyMouse10.jpg" title="The End"></div>
 <div class="mySlides" style="text-align: center;"><img src="MickeyMouse11.jpg" title=""></div>
 <div class="mySlides" style="text-align: center;"><img src="MickeyMouse12.jpg" title=""></div>
+<div class="mySlides" style="text-align: center;"><img src="MickeyMouse13.jpg" title=""></div>
+<div class="mySlides" style="text-align: center;"><img src="MickeyMouse14.jpg" title=""></div>
+<div class="mySlides" style="text-align: center;"><img src="MickeyMouse15.jpg" title=""></div>
+<div class="mySlides" style="text-align: center;"><img src="MickeyMouse16.jpg" title=""></div>
+<div class="mySlides" style="text-align: center;"><img src="MickeyMouse17.jpg" title=""></div>
+<div class="mySlides" style="text-align: center;"><img src="MickeyMouse18.jpg" title=""></div>
+<div class="mySlides" style="text-align: center;"><img src="MickeyMouse19.jpg" title=""></div>
+<div class="mySlides" style="text-align: center;"><img src="MickeyMouse20.jpg" title=""></div>
+<div class="mySlides" style="text-align: center;"><img src="MickeyMouse21.jpg" title=""></div>
+<div class="mySlides" style="text-align: center;"><img src="MickeyMouse22.jpg" title=""></div>
+<div class="mySlides" style="text-align: center;"><img src="MickeyMouse23.jpg" title=""></div>
+<div class="mySlides" style="text-align: center;"><img src="MickeyMouse24.jpg" title=""></div>
+<div class="mySlides" style="text-align: center;"><img src="MickeyMouse25.jpg" title=""></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
