--- a/index.html
+++ b/index.html
@@ -7043,6 +7043,13 @@
 </tr>
 
 <tr>
+<td>Hawkman</td>
+<td>1964</td>
+<td>DC</td>
+<td><a href="Hawkman/Hawkman.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Head Lopper</td>
 <td>2015</td>
 <td>Image</td>
