American's Best Comics

--- a/index.html
+++ b/index.html
@@ -1339,6 +1339,13 @@
 </tr>
 
 <tr>
+<td>America's Best Comics</td>
+<td>1942</td>
+<td>Pines</td>
+<td><a href="AmericasBestComics/AmericasBestComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>American</td>
 <td>1988</td>
 <td>Dark Horse</td>
