--- a/index.html
+++ b/index.html
@@ -13838,6 +13838,13 @@
 </tr>
 
 <tr>
+<td>Taarna</td>
+<td>2018</td>
+<td>HeavyMetal</td>
+<td><a href="Taarna/Taarna.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Tailspin Comics</td>
 <td>1944</td>
 <td>Spotlight</td>
