--- a/HeavyMetal/HeavyMetal.html
+++ b/HeavyMetal/HeavyMetal.html
@@ -9,21 +9,8 @@
 
 <body>
 <img src="HeavyMetalLogo.jpg"> <br>
-Series: Movie (1981 Columbia Pictures), on-going magazine<br>
-Publisher: 1977 HM Publications, 1992 Metal Mammoth<br>
+295 issues from 1977 to 2019 by HM Publications, 1 Movie in 1981 by Columbia Pictures
 <p>
-Heavy Metal is a 1981 Canadian-American adult animated sci-fi-fantasy film directed by Gerald Potterton, produced by Ivan Reitman and Leonard Mogel, who also was the publisher of Heavy Metal magazine, which was the basis for the film, and starring the voices of Rodger Bumpass, Jackie Burroughs, John Candy, Joe Flaherty, Don Francks, Martin Lavut, Marilyn Lightstone, Eugene Levy, Alice Playten, Harold Ramis, Percy Rodriguez, Susan Roman, Richard Romanus, August Schellenberg, John Vernon, and Zal Yanovsky. The screenplay was written by Daniel Goldberg and Len Blum.
-</p><p>
-Dubbed "The adult illustrated fantasy magazine," Heavy Metal also publishes tales of horror, science fiction, and adventure. It is an American science fiction and fantasy comics magazine, known primarily for its blend of dark fantasy/science fiction and erotica. In the mid-1970s, while publisher Leonard Mogel was in Paris to jump-start the French edition of National Lampoon, he discovered the French science-fantasy magazine Métal Hurlant which had debuted January 1975. The French title translates literally as "Howling Metal".
-</p><p>
-When Mogel licensed the American version, he chose to rename it, and Heavy Metal began in the U.S. in April 1977 as a glossy, full-color monthly. Initially, it displayed translations of graphic stories originally published in Métal Hurlant, including work by Enki Bilal, Philippe Caza, Guido Crepax, Philippe Druillet, Jean-Claude Forest, Jean Giraud (a.k.a. Moebius) and Milo Manara. The magazine later ran Stefano Tamburini and Tanino Liberatore's ultra-violent RanXerox. Since the color pages had already been shot in France, the budget to reproduce them in the U.S. version was greatly reduced.
-</p><p>
-HM Communications published 136 issues in 16 volumes from April 1977 to March 1992 (<a href="HeavyMetal141.html">Heavy Metal #141</a>). Meanwhile, the original Métal Hurlant had ceased publication in France in 1987. It resumed in July 2002, published by Les Humanoïdes Associés.
-</p><p>
-Kevin Eastman, co-creator of the Teenage Mutant Ninja Turtles, had grown up reading Heavy Metal, seeing in its pages European art which had not been previously seen in the United States, as well as an underground comix sensibility that nonetheless "wasn't as harsh or extreme as some of the underground comix, but definitely intended for an older readership." Eastman took over publication of Heavy Metal with volume 16 in May 1992, under the name Metal Mammoth, Inc. (<a href="HeavyMetal142.html">Heavy Metal #142</a>)
-</p><p>
-Eastman sold the magazine to digital and music veteran David Boxenbaum and film producer Jeff Krelitz in January 2014. Eastman continued to serve as publisher of the magazine and is a minority investor in the new Heavy Metal.
-</p><p>
 <div class="row">
 <div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
@@ -350,10 +337,10 @@ Eastman sold the magazine to digital and music veteran David Boxenbaum and film 
 <div class="mySlides" style="text-align: center;"><img src="HeavyMetal314.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="HeavyMetal315.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="HeavyMetal316.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="HeavyMetal317.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="HeavyMetal318.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="HeavyMetal319.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="HeavyMetal320.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="HeavyMetal317.jpg" title="317 (if you include the Specials) but says 259"></div>
+<div class="mySlides" style="text-align: center;"><img src="HeavyMetal318.jpg" title="318 but says 260"></div>
+<div class="mySlides" style="text-align: center;"><img src="HeavyMetal319.jpg" title="319 but says 261"></div>
+<div class="mySlides" style="text-align: center;"><img src="HeavyMetal320.jpg" title="320 but says 262"></div>
 <div class="mySlides" style="text-align: center;"><img src="HeavyMetal321.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="HeavyMetal322.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="HeavyMetal323.jpg"></div>
@@ -373,32 +360,68 @@ Eastman sold the magazine to digital and music veteran David Boxenbaum and film 
 <div class="mySlides" style="text-align: center;"><img src="HeavyMetal337.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="HeavyMetal338.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="HeavyMetal339.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="HeavyMetal340.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="HeavyMetal341.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="HeavyMetal342.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="HeavyMetal342b.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="HeavyMetal342c.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="HeavyMetal343.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="HeavyMetal343b.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="HeavyMetal343c.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="HeavyMetal344.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="HeavyMetal344b.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="HeavyMetal344c.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="HeavyMetal345.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="HeavyMetal346.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="HeavyMetal346b.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="HeavyMetal346c.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="HeavyMetal347a.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="HeavyMetal347b.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="HeavyMetal347c.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="HeavyMetal347d.jpg"></div>
-
+<div class="mySlides" style="text-align: center;"><img src="HeavyMetal340.jpg" title="340 but says 282"></div>
+<div class="mySlides" style="text-align: center;"><img src="HeavyMetal341.jpg" title="341 but says 283"></div>
+<div class="mySlides" style="text-align: center;"><img src="HeavyMetal342.jpg" title="342A but says 284A"></div>
+<div class="mySlides" style="text-align: center;"><img src="HeavyMetal342b.jpg" title="342B but says 284B"></div>
+<div class="mySlides" style="text-align: center;"><img src="HeavyMetal342c.jpg" title="342C but says 284C"></div>
+<div class="mySlides" style="text-align: center;"><img src="HeavyMetal343.jpg" title="343A but says 285A"></div>
+<div class="mySlides" style="text-align: center;"><img src="HeavyMetal343b.jpg" title="343B but says 285B"></div>
+<div class="mySlides" style="text-align: center;"><img src="HeavyMetal343c.jpg" title="343C but says 285C"></div>
+<div class="mySlides" style="text-align: center;"><img src="HeavyMetal344.jpg" title="344A but says 286A"></div>
+<div class="mySlides" style="text-align: center;"><img src="HeavyMetal344b.jpg" title="344B but says 286B"></div>
+<div class="mySlides" style="text-align: center;"><img src="HeavyMetal344c.jpg" title="344C but says 286C"></div>
+<div class="mySlides" style="text-align: center;"><img src="HeavyMetal345.jpg" title="345A but says 287A"></div>
+<div class="mySlides" style="text-align: center;"><img src="HeavyMetal346.jpg" title="346A but says 288A"></div>
+<div class="mySlides" style="text-align: center;"><img src="HeavyMetal346b.jpg" title="346B but says 288B"></div>
+<div class="mySlides" style="text-align: center;"><img src="HeavyMetal346c.jpg" title="346C but says 288C"></div>
+<div class="mySlides" style="text-align: center;"><img src="HeavyMetal347a.jpg" title="347A but says 289A"></div>
+<div class="mySlides" style="text-align: center;"><img src="HeavyMetal347b.jpg" title="347B but says 289B"></div>
+<div class="mySlides" style="text-align: center;"><img src="HeavyMetal347c.jpg" title="347C but says 289C"></div>
+<div class="mySlides" style="text-align: center;"><img src="HeavyMetal347d.jpg" title="347D but says 289D"></div>
+<div class="mySlides" style="text-align: center;"><img src="HeavyMetal348a.jpg" title="348A but says 290A"></div>
+<div class="mySlides" style="text-align: center;"><img src="HeavyMetal348b.jpg" title="348B but says 290B"></div>
+<div class="mySlides" style="text-align: center;"><img src="HeavyMetal348c.jpg" title="348C but says 290C"></div>
+<div class="mySlides" style="text-align: center;"><img src="HeavyMetal349a.jpg" title="349A but says 291A"></div>
+<div class="mySlides" style="text-align: center;"><img src="HeavyMetal349b.jpg" title="349B but says 291B"></div>
+<div class="mySlides" style="text-align: center;"><img src="HeavyMetal349c.jpg" title="349C but says 291C"></div>
+<div class="mySlides" style="text-align: center;"><img src="HeavyMetal349d.jpg" title="349D but says 291D"></div>
+<div class="mySlides" style="text-align: center;"><img src="HeavyMetal350a.jpg" title="350A but says 292A"></div>
+<div class="mySlides" style="text-align: center;"><img src="HeavyMetal350b.jpg" title="350B but says 292B"></div>
+<div class="mySlides" style="text-align: center;"><img src="HeavyMetal350c.jpg" title="350C but says 292C"></div>
+<div class="mySlides" style="text-align: center;"><img src="HeavyMetal350d.jpg" title="350D but says 292D"></div>
+<div class="mySlides" style="text-align: center;"><img src="HeavyMetal351a.jpg" title="351A but says 293A"></div>
+<div class="mySlides" style="text-align: center;"><img src="HeavyMetal351b.jpg" title="351B but says 293B"></div>
+<div class="mySlides" style="text-align: center;"><img src="HeavyMetal351c.jpg" title="351C but says 293C"></div>
+<div class="mySlides" style="text-align: center;"><img src="HeavyMetal351d.jpg" title="351D but says 293D"></div>
+<div class="mySlides" style="text-align: center;"><img src="HeavyMetal352a.jpg" title="352A but says 294A"></div>
+<div class="mySlides" style="text-align: center;"><img src="HeavyMetal352b.jpg" title="352B but says 294B"></div>
+<div class="mySlides" style="text-align: center;"><img src="HeavyMetal352c.jpg" title="352C but says 294C"></div>
+<div class="mySlides" style="text-align: center;"><img src="HeavyMetal352d.jpg" title="352D but says 294D"></div>
+<div class="mySlides" style="text-align: center;"><img src="HeavyMetal353a.jpg" title="353A but says 295A"></div>
+<div class="mySlides" style="text-align: center;"><img src="HeavyMetal353b.jpg" title="353B but says 295B"></div>
+<div class="mySlides" style="text-align: center;"><img src="HeavyMetal353c.jpg" title="353C but says 295C"></div>
+<div class="mySlides" style="text-align: center;"><img src="HeavyMetal353d.jpg" title="353D but says 295D"></div>
+<div class="mySlides" style="text-align: center;"><img src="HeavyMetal353e.jpg" title="353E but says 295E"></div>
+<div class="mySlides" style="text-align: center;"><img src="HeavyMetal353f.jpg" title="353F but says 295F"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
-
 </p><p>
+Heavy Metal is a 1981 Canadian-American adult animated sci-fi-fantasy film directed by Gerald Potterton, produced by Ivan Reitman and Leonard Mogel, who also was the publisher of Heavy Metal magazine, which was the basis for the film, and starring the voices of Rodger Bumpass, Jackie Burroughs, John Candy, Joe Flaherty, Don Francks, Martin Lavut, Marilyn Lightstone, Eugene Levy, Alice Playten, Harold Ramis, Percy Rodriguez, Susan Roman, Richard Romanus, August Schellenberg, John Vernon, and Zal Yanovsky. The screenplay was written by Daniel Goldberg and Len Blum.
+</p><p>
+Dubbed "The adult illustrated fantasy magazine," Heavy Metal also publishes tales of horror, science fiction, and adventure. It is an American science fiction and fantasy comics magazine, known primarily for its blend of dark fantasy/science fiction and erotica. In the mid-1970s, while publisher Leonard Mogel was in Paris to jump-start the French edition of National Lampoon, he discovered the French science-fantasy magazine Métal Hurlant which had debuted January 1975. The French title translates literally as "Howling Metal".
+</p><p>
+When Mogel licensed the American version, he chose to rename it, and Heavy Metal began in the U.S. in April 1977 as a glossy, full-color monthly. Initially, it displayed translations of graphic stories originally published in Métal Hurlant, including work by Enki Bilal, Philippe Caza, Guido Crepax, Philippe Druillet, Jean-Claude Forest, Jean Giraud (a.k.a. Moebius) and Milo Manara. The magazine later ran Stefano Tamburini and Tanino Liberatore's ultra-violent RanXerox. Since the color pages had already been shot in France, the budget to reproduce them in the U.S. version was greatly reduced.
+</p><p>
+HM Communications published 136 issues in 16 volumes from April 1977 to March 1992 (<a href="HeavyMetal141.html">Heavy Metal #141</a>). Meanwhile, the original Métal Hurlant had ceased publication in France in 1987. It resumed in July 2002, published by Les Humanoïdes Associés.
+</p><p>
+Kevin Eastman, co-creator of the Teenage Mutant Ninja Turtles, had grown up reading Heavy Metal, seeing in its pages European art which had not been previously seen in the United States, as well as an underground comix sensibility that nonetheless "wasn't as harsh or extreme as some of the underground comix, but definitely intended for an older readership." Eastman took over publication of Heavy Metal with volume 16 in May 1992, under the name Metal Mammoth, Inc. (<a href="HeavyMetal142.html">Heavy Metal #142</a>)
+</p><p>
+Eastman sold the magazine to digital and music veteran David Boxenbaum and film producer Jeff Krelitz in January 2014. Eastman continued to serve as publisher of the magazine and is a minority investor in the new Heavy Metal.
+</p><p>
+
 <ul>
 <li><a href="HeavyMetal001.html">Heavy Metal #1</a> April 1977</li>
 <li><a href="HeavyMetal002.html">Heavy Metal #2</a> May 1977</li>
@@ -716,7 +739,7 @@ Eastman sold the magazine to digital and music veteran David Boxenbaum and film 
 <li><a href="HeavyMetal314.html">Heavy Metal #314</a> Jan 2012</li>
 <li><a href="HeavyMetal315.html">Heavy Metal #315</a> March 2012</li>
 <li><a href="HeavyMetal316.html">Heavy Metal #316</a> May 2012</li>
-<li><a href="HeavyMetal317.html">Heavy Metal #317</a> 259</li>
+<li><a href="HeavyMetal317.html">Heavy Metal #317</a> 259 First numbered issue!</li>
 <li><a href="HeavyMetal318.html">Heavy Metal #318</a> 260</li>
 <li><a href="HeavyMetal319.html">Heavy Metal #319</a> 261</li>
 <li><a href="HeavyMetal320.html">Heavy Metal #320</a> 262</li>
@@ -741,7 +764,7 @@ Eastman sold the magazine to digital and music veteran David Boxenbaum and film 
 <li><a href="HeavyMetal339.html">Heavy Metal #339</a> 281</li>
 <li><a href="HeavyMetal340.html">Heavy Metal #340</a> 282</li>
 <li><a href="HeavyMetal341.html">Heavy Metal #341</a> 283</li>
-<li><a href="HeavyMetal342.html">Heavy Metal #342a</a> 284a</li>
+<li><a href="HeavyMetal342.html">Heavy Metal #342a</a> 284a First alt cover issue</li>
 <li><a href="HeavyMetal342b.html">Heavy Metal #342b</a> 284b</li>
 <li><a href="HeavyMetal342c.html">Heavy Metal #342c</a> 284c</li>
 <li><a href="HeavyMetal343.html">Heavy Metal #343a</a> 285a</li>
