--- a/Taarna/Taarna.html
+++ b/Taarna/Taarna.html
@@ -27,6 +27,7 @@
 <div class="mySlides" style="text-align: center;"><img src="Taarna3b.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Taarna4.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Taarna4b.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Taarna5.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
