--- a/index.html
+++ b/index.html
@@ -7113,6 +7113,13 @@
 </tr>
 
 <tr>
+<td>Heavy Liquid</td>
+<td>1999</td>
+<td>Vertigo</td>
+<td><a href="HeavyLiquid/HeavyLiquid.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Heavy Metal</td>
 <td>1977</td>
 <td>Metal Mammoth</td>
@@ -13583,6 +13590,13 @@
 <td>1952</td>
 <td>Farrell</td>
 <td><a href="StrangeFantasy/StrangeFantasy.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Strange Science Fantasy</td>
+<td>2010</td>
+<td>IDW</td>
+<td><a href="StrangeScienceFantasy/StrangeScienceFantasy.html">Details</a></td>
 </tr>
 
 <tr>
