--- a/CaptainAero/CaptainAero.html
+++ b/CaptainAero/CaptainAero.html
@@ -29,6 +29,7 @@
 <div class="mySlides" style="text-align: center;"><img src="CaptainAero8.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="CaptainAero9.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="CaptainAero10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CaptainAero11.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
