--- a/index.html
+++ b/index.html
@@ -2210,6 +2210,13 @@
 </tr>
 
 <tr>
+<td>Battle of the Planets</td>
+<td>1972</td>
+<td>Tatsunoko</td>
+<td><a href="Gatchaman/Gatchaman.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Battle Scars</td>
 <td>2012</td>
 <td>Marvel</td>
@@ -6365,6 +6372,13 @@
 </tr>
 
 <tr>
+<td>Gatchaman</td>
+<td>1972</td>
+<td>Tatsunoko</td>
+<td><a href="Gatchaman/Gatchaman.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Gay Comics</td>
 <td>1944</td>
 <td>Timely</td>
@@ -6761,6 +6775,13 @@
 <td>1975</td>
 <td>Atlas Seaboard</td>
 <td><a href="GrimGhost/GrimGhost.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Grimjack</td>
+<td>1984</td>
+<td>First</td>
+<td><a href="GrimJack/GrimJack.html">Details</a></td>
 </tr>
 
 <tr>
