--- a/index.html
+++ b/index.html
@@ -13138,6 +13138,13 @@
 </tr>
 
 <tr>
+<td>Space Action</td>
+<td>1952</td>
+<td>Ace Magazines</td>
+<td><a href="SpaceAction/SpaceAction.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Space Adventures</td>
 <td>1958</td>
 <td>Charlton</td>
