--- a/index.html
+++ b/index.html
@@ -9900,6 +9900,13 @@
 </tr>
 
 <tr>
+<td>Mega Drive</td>
+<td>2012</td>
+<td>Creator</td>
+<td><a href="MegaDrive/MegaDrive.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Mekanix</td>
 <td>2002</td>
 <td>Marvel</td>
@@ -14059,6 +14066,13 @@
 <td>1999</td>
 <td>Dark Horse</td>
 <td><a href="Territory/Territory.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Terror Tales</td>
+<td>1969</td>
+<td>Eerie</td>
+<td><a href="TerrorTales/TerrorTales.html">Details</a></td>
 </tr>
 
 <tr>
