--- a/index.html
+++ b/index.html
@@ -5972,6 +5972,13 @@
 </tr>
 
 <tr>
+<td>Flight</td>
+<td>2004</td>
+<td>Image</td>
+<td><a href="Flight/Flight.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Flight of Angels</td>
 <td>2011</td>
 <td>Vertigo</td>
