--- a/index.html
+++ b/index.html
@@ -4106,6 +4106,13 @@
 </tr>
 
 <tr>
+<td>Crisis On Infinite Earths</td>
+<td>1985</td>
+<td>DC</td>
+<td><a href="CrisisOnInfiniteEarths/CrisisOnInfiniteEarths.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Crossing Midnight</td>
 <td>2006</td>
 <td>Vertigo</td>
@@ -8108,6 +8115,13 @@
 </tr>
 
 <tr>
+<td>Jimmy Corrigan</td>
+<td>2000</td>
+<td>Pantheon Books</td>
+<td><a href="JimmyCorrigan/JimmyCorrigan.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Jingle Belle</td>
 <td>2004</td>
 <td>Dark Horse</td>
@@ -8749,6 +8763,13 @@
 <td>2013</td>
 <td>Image</td>
 <td><a href="Lazarus/Lazarus.html">Details</a></td>
+</tr>
+
+<tr>
+<td>League of Extraordinary Gentlemen</td>
+<td>1999</td>
+<td>DC</td>
+<td><a href="LeagueOfExtraordinaryGentlemen/LeagueOfExtraordinaryGentlemen.html">Details</a></td>
 </tr>
 
 <tr>
